--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "workbox-range-requests": "^6.6.0",
     "workbox-routing": "^6.6.0",
     "workbox-strategies": "^6.6.0",
-    "workbox-streams": "^6.6.0"
+    "workbox-streams": "^6.6.0",
+    "zod": "^3.22.4"
   },
   "scripts": {
     "start": "react-scripts start",
