--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
+    "@types/use-sync-external-store": "^0.0.6",
     "axios": "^1.6.7",
+    "immer": "^10.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-push-notification": "^1.5.4",
@@ -21,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "typescript": "^4.9.5",
+    "use-sync-external-store": "^1.2.0",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.6.0",
     "workbox-broadcast-update": "^6.6.0",
