--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "no-cache"
+            "value": "max-age=0, no-cache, no-store, must-revalidate"
           }
         ]
       }
