--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,15 @@
             "value": "max-age=0, no-cache, no-store, must-revalidate"
           }
         ]
+      },
+      {
+        "source": "service-worker.js",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "max-age=0, no-cache, no-store, must-revalidate"
+          }
+        ]
       }
     ]
   }
